* Added filterable "edit_theme_options" capability to License admin page.
* Added default styling for captions of a `[gallery]`.
* Added support for some new features of Sliders plugin v1.1+.
* Added support for WP 3.5+ media uploader.
* Added support for Nivo Slider.
* Added `themeblvd_default_sidebar_args` filter for arguments when registering default sidebar locations.
* Reconstruction of how pagination works to be more extendable. See new function `themeblvd_get_pagination` in /framework/functions/parts.php, and new functions `themeblvd_get_pagination_parts` in /framework/functions/helpers.php.
* Expanded "Featured Image Link" video link to accept any WordPress oEmbed URL.
* Slight UI improvements to Logo option in default Theme Options panel.
* Majorly reduced framework's footprint on `$GLOBAL` namespace with re-structuring.
* API functionality for Widget Areas, Theme Options, and Stylesheets completely re-structured.
* API functionality for Layout Builder and Sliders moved to their respective plugins.
* Theme settings when loading site now available immediately following `after_setup_theme` hook in the loading process for using `themeblvd_get_option()`.
* Improved overall query performance throughout theme; this results in huge improvements when using theme as traditional blog.
* Post List template pages, Post Grid page template pages, and static pages with custom layouts, can now all be set as a static frontpage and maintain pagination.
* Added `themeblvd_was()` function to check conditionals for a current page while in a secondary loop of posts. -- i.e. `if( themeblvd_was('page', 'example-page') )`
* Added PHP Class you can use to create meta boxes objects utilizing internal options framework. -- `Theme_Blvd_Meta_Box`